Revert "Merge pull request #175 from notnotmax/v1.5-lesson-attendance"
This reverts commit 6c0859531010e0b521e3063443546a062c04d943, reversing
changes made to a55036c9607175b9b88b33d83c06a47fd4910a2f.